# AphelEdu

./: .gitignore  CMakeLists.txt  README.md
01-hello-world/: CMakeLists.txt  main.cpp
02-cin/: CMakeLists.txt  main.cpp
03-calculation/: CMakeLists.txt  main.cpp
04-note/: CMakeLists.txt  main.cpp
05-functions/: main.cpp
05-variables/: CMakeLists.txt  main.cpp
06-functions/: CMakeLists.txt  main.cpp
07-test/: main.cpp
08-foop/: CMakeLists.txt  main.cpp
09-filesystem/: CMakeLists.txt  main.cpp
10-register/: CMakeLists.txt  main.cpp
11-login/: CMakeLists.txt  main.cpp
12-cut/: CMakeLists.txt  main.cpp
13-register2/: CMakeLists.txt  main.cpp
14-register3/: CMakeLists.txt  main.cpp
15-login2/: CMakeLists.txt  main.cpp
16-register-final/: CMakeLists.txt  main.cpp
