cmake_minimum_required(VERSION 3.14)

project(aphel)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(01-hello-world)
add_subdirectory(02-cin)
add_subdirectory(03-calculation)
add_subdirectory(04-note)
add_subdirectory(05-variables)
add_subdirectory(06-functions)
add_subdirectory(07-test)
add_subdirectory(08-foop)
add_subdirectory(09-filesystem)
add_subdirectory(10-register)
add_subdirectory(11-login)
add_subdirectory(12-cut)